--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,6 @@
 @import "{{ site.theme }}";
 
 .page-header {
-  background-image: url("assets/img/connected.jpg");
+  background-image: url("https://www.trevilon.com/images/connected.jpg");
   background-repeat: no-repeat;
  }
