--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,4 +6,6 @@
 .page-header {
   background-image: url("https://www.trevilon.com/images/connected.jpg");
   background-repeat: no-repeat;
+  width: 100%;
+  height: 160px;
  }
