--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,8 @@
 .page-header {
   background-image: url("https://www.trevilon.com/images/connected.jpg");
   background-repeat: no-repeat;
+  background-position: center top;
+  background-color: #000;
   width: 100%;
   height: 160px;
  }
